# kinetix

./: .env.example  .gitignore  CLAUDE.md  README.md  build.gradle.kts  coverage-baselines.json  docker-compose.live-demo.yml  docker-compose.services.yml  docker-compose.test.yml  gradle.properties  settings.gradle.kts
ai-insights-service/: Dockerfile  Makefile  README.md  pyproject.toml
ai-insights-service/src/kinetix_insights/: __init__.py  app.py  cache.py  canned.py  claude_agent_client.py  factory.py  insights_client.py  models.py  prompts.py
ai-insights-service/tests/: test_app_smoke.py  test_audit_logging.py  test_brief_acceptance.py  test_brief_factory.py  test_cache.py  test_canned_chat_client.py  test_canned_client.py  test_chat_acceptance.py  test_chat_factory.py  test_chat_grounded_acceptance.py  test_chat_guardrails.py  test_chat_latency.py  test_chat_models.py  test_chat_user_isolation_integration.py  test_citation_models.py  test_citation_verifier.py  test_claude_agent_chat_client.py  test_claude_agent_client.py  test_conversation_store_in_memory.py  test_conversation_store_redis_integration.py  test_data_grounded_canned_chat_client.py  test_factory.py  test_gateway_push_client.py  test_intent_router.py  test_intraday_kafka_consumer.py  test_intraday_push_generator.py  test_kinetix_http_client.py  test_mcp_server_scaffold.py  test_mcp_tool_registry.py  test_metrics_endpoint.py  test_models.py  test_morning_brief_generator.py  test_policy_guard.py  test_prometheus_metrics.py  test_query_templates_load.py  test_report_commentary_acceptance.py  test_saved_queries_acceptance.py  test_streaming_sdk_fake.py  test_threshold_evaluator.py  test_tool_get_active_alerts.py  (+12 more)
ai-insights-service/tests/eval/: test_golden_dataset.py  test_live_eval.py  test_offline_eval.py  test_scorecard.py
ai-insights-service/tests/fakes/: fake_kinetix_http_client.py  streaming_sdk.py
risk-engine/: THREAD_POOL_TUNING.md  pyproject.toml
risk-engine/scripts/: profile_thread_pool.py
risk-engine/src/kinetix_risk/: asian.py  backtesting.py  barrier.py  black_scholes.py  bond_pricing.py  (+34 more)
risk-engine/tests/: test_anomaly_detector.py  test_asian.py  test_backtesting.py  test_backtesting_edge_cases.py  test_barrier.py  test_black_scholes.py  test_black_scholes_invariants.py  test_bond_pricing.py  test_bond_pricing_invariants.py  test_bs_deep_itm.py  test_bs_gamma_spike.py  test_bs_negative_div_yield.py  test_bs_negative_rates.py  test_bs_vega_near_expiry.py  test_bs_zero_strike.py  test_calculation_logging.py  test_correlation.py  test_credit_model.py  test_cross_greeks.py  test_dependencies.py  test_dependencies_converters.py  test_deterministic_var.py  test_digital.py  test_drc_enhanced.py  test_ewma.py  test_expected_shortfall.py  test_frtb_calculator.py  test_frtb_drc.py  test_frtb_models.py  test_frtb_report.py  test_frtb_rrao.py  test_frtb_sbm.py  test_greeks.py  test_greeks_perfect_correlation.py  test_greeks_single_asset.py  test_historical_replay.py  test_iv_inversion.py  test_local_vol.py  test_logging.py  test_lookback.py  (+44 more)
(+2160 files in other folders)
