[project]
name = "kinetix-risk"
version = "0.1.0"
description = "Python risk engine for Kinetix — VaR, Monte Carlo, Greeks, ML models"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "grpcio>=1.60",
    "protobuf>=4.25",
    "prometheus_client>=0.21",
    "torch>=2.2",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "opentelemetry-instrumentation-grpc>=0.41b0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "mutmut>=3.0",
    "grpcio-tools>=1.60",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """\
    --strict-markers \
    --junitxml=reports/pytest.xml \
    --cov=src/kinetix_risk \
    --cov-report=term-missing \
    --cov-report=xml:reports/coverage.xml \
    --cov-report=html:reports/htmlcov\
"""
markers = [
    "unit: Pure logic tests — no I/O, no gRPC servers",
    "integration: Tests that start an in-process gRPC server",
    "performance: Load and latency tests",
]

[tool.coverage.run]
branch = true
source = ["src/kinetix_risk"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false

[tool.mutmut]
# Mutation testing config. Run with `uv run mutmut run`; results land in
# .mutmut-cache. Focus on the calculation modules where invariant tests
# (test_*_invariants.py, hypothesis-driven) should catch most mutants.
paths_to_mutate = "src/kinetix_risk/black_scholes.py,src/kinetix_risk/greeks.py,src/kinetix_risk/var_historical.py,src/kinetix_risk/var_parametric.py,src/kinetix_risk/var_monte_carlo.py,src/kinetix_risk/monte_carlo.py,src/kinetix_risk/bond_pricing.py,src/kinetix_risk/swap_pricing.py,src/kinetix_risk/volatility.py"
runner = "uv run pytest -x -q -m unit --no-cov"
tests_dir = "tests"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kinetix_risk"]
